# microservice_book

./: .gitignore  Cargo.toml
chapter-10/resize-image/: Cargo.toml
chapter-10/resize-image/actor-actix/: Cargo.toml
chapter-10/resize-image/actor-actix/src/: main.rs
chapter-10/resize-image/actor-actix/src/actors/: count.rs  log.rs  resize.rs
chapter-10/resize-image/concurrency-pool/: Cargo.toml  test.sh
chapter-10/resize-image/concurrency-pool/src/: main.rs
chapter-10/resize-image/single-thread/src/: main.rs
chapter-10/resize-image/src/: main.rs
chapter-11/actix_web-route-request/: Cargo.toml
chapter-11/actix_web-route-request-ws/: Cargo.toml
chapter-11/actix_web-route-request-ws/src/: cache.rs  client.rs  counter.rs  error.rs  handlers.rs  lib.rs  main.rs  notify.rs  repeater.rs
chapter-11/actix_web-route-request/src/: cache.rs  client.rs  counter.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs
chapter-12/actix-rabbitmq-qr/: Cargo.toml
chapter-12/actix-rabbitmq-qr/src/: handlers.rs  lib.rs  queue_actor.rs  server.rs  worker.rs
chapter-12/actix-rabbitmq-qr/src/state/: mod.rs  tasks.rs
chapter-13/actix_web-route-request-tests/: Cargo.toml  links.toml
chapter-13/actix_web-route-request-tests/src/: content.rs  counter.rs  handlers.rs  lib.rs  mailer.rs  main.rs  router.rs  users.rs  utils.rs
chapter-13/actix_web-route-request-tests/tests/: mailer.rs  router.rs  types.rs  utils.rs
chapter-13/slog-demo/: Cargo.toml
chapter-13/slog-demo/src/: main.rs
chapter-13/tracing-demo/: Cargo.toml
chapter-13/tracing-demo/src/: main.rs
chapter-14/bencher-demo/: Cargo.toml
chapter-14/bencher-demo/src/: lib.rs
chapter-14/perf-measure/: Cargo.toml
chapter-14/perf-measure-featured/: Cargo.toml
chapter-14/perf-measure-featured/src/: main.rs
chapter-14/perf-measure/src/: main.rs
chapter-14/perf-measure/templates/: index.html
chapter-14/profiler-flame-demo/: Cargo.toml
chapter-14/profiler-flame-demo/src/: main.rs
chapter-15/: docker-compose.prod.yml  docker-compose.test.yml
chapter-15/microservices/content/: Cargo.toml  Dockerfile  Rocket.toml
chapter-15/microservices/content/src/: comment.rs  main.rs  schema.rs
chapter-15/microservices/dbsync/: Cargo.toml  Dockerfile
chapter-15/microservices/dbsync/migrations/2023-01-15-084402_create_tables/: down.sql
chapter-15/microservices/dbsync/src/: main.rs
chapter-15/microservices/mails/: Dockerfile
chapter-15/microservices/mails/src/: main.rs  settings.rs
chapter-15/microservices/router/: Cargo.toml  Dockerfile
chapter-15/microservices/router/src/: cache.rs  cache_actor.rs  client.rs  counter.rs  handlers.rs  lib.rs  main.rs  settings.rs
chapter-15/microservices/router/tests/: content.rs  mailer.rs  types.rs  users.rs  utils.rs
chapter-15/microservices/users/: Cargo.toml  Dockerfile  test.db
chapter-15/microservices/users/src/: handlers.rs  main.rs  models.rs  schema.rs  settings.rs
chapter-16/: docker-compose.yml
chapter-16/gogs/git/gogs-repositories/developer/microservice.git/info/: refs
chapter-16/gogs/git/gogs-repositories/developer/microservice.git/refs/heads/: master
chapter-16/gogs/gogs/conf/: app.ini
chapter-16/gogs/gogs/data/: gogs.db
chapter-16/gogs/gogs/data/sessions/b/3/: b39c251c572d6f9a
chapter-16/images/rust-slave/: Dockerfile
chapter-16/microservice/: Cargo.toml
chapter-16/microservice/src/: main.rs
chapter-16/teamcity/agent/: buildAgent.properties
chapter-2/: Cargo.toml
chapter-2/src/: main.rs
chapter-3/: Cargo.toml
chapter-3/src/: main.rs
chapter-4/: Cargo.toml
chapter-4/src/: color.rs  main.rs
chapter-5/: Cargo.toml
chapter-5/src/: main.rs
chapter-6/: Cargo.toml
chapter-6/grpc-ring/: Cargo.toml  build.rs  test.sh
chapter-6/grpc-ring/src/: client.rs  error.rs  lib.rs  ring.proto  ring.rs  ring_grpc.rs  ringproto.rs  server.rs
chapter-6/grpc-ring/src/protos/: ring.proto
chapter-6/json-rpc-ring-microservice/src/: main.rs
chapter-6/src/: main.rs
chapter-7/mongodb-user-activity/: Cargo.toml
chapter-7/mongodb-user-activity/src/: main.rs
chapter-7/redis-session-store/: Cargo.toml
chapter-7/redis-session-store/src/: main.rs
chapter-7/users/: Cargo.toml
chapter-7/users/src/: main.rs
chapter-8/chat/: Cargo.toml
chapter-8/chat/migrations/00000000000000_diesel_initial_setup/: up.sql
chapter-8/chat/migrations/2022-11-03-072336_create_messages/: up.sql
chapter-8/chat/src/: lib.rs  models.rs  schema.rs
chapter-8/diesel-user-cli/: Cargo.toml  test.db
chapter-8/diesel-user-cli/src/: main.rs  models.rs  schema.rs
chapter-9/gotham-postgres-store/: Cargo.toml
chapter-9/gotham-postgres-store/src/: main.rs
chapter-9/nickel-mailing/: Cargo.toml
chapter-9/nickel-mailing/src/: main.rs  settings.rs
chapter-9/nickel-mailing/templates/: confirm.tpl
chapter-9/rocket-comment/: Cargo.toml  test.db
chapter-9/rocket-comment/src/: comment.rs  main.rs  schema.rs
chapter-9/rouille-user-registration/src/: handlers.rs  models.rs
src/: main.rs
