[package]
name = "perf-measure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
askama = "0.11.1"
chrono = "0.4.23"
env_logger = "0.10.0"
futures = "0.3.25"

[features]
default = []
cache = []
rwlock = []
borrow = []
fast = ["cache", "rwlock", "borrow"]

[profile.release]
strip = "debuginfo"
lto = true
