[package]
name = "grpc-ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
failure = "0.1.8"
grpc = "0.8.3"
log = "0.4.17"
protobuf = "3.2.0"

[dev-dependencies]
protoc-rust-grpc = "0.8.3"


[[bin]]
name = "grpc-ring"
path = "src/server.rs"
test = false

[[bin]]
name = "grpc-ring-client"
path = "src/client.rs"
test = false
