[package]
name = "grpc-ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
prost = "0.11.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"

[[bin]]
name = "grpc-ring"
path = "src/server.rs"
test = false

[[bin]]
name = "grpc-ring-client"
path = "src/client.rs"
test = false
