[package]
name = "mongodb-user-activity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["cargo"] }
failure = "0.1.8"
mongodb = { version = "2.3.1", features = ["tokio-sync"] }
serde = "1.0.147"
serde_derive = "1.0.147"
