[package]
name = "radis-session-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
failure = "0.1.8"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis = "0.22.1"
