[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
csv = "1.1.6"
failure = "0.1.8"
postgres = "0.19.4"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rayon = "1.5.3"
serde = "1.0.147"
serde_derive = "1.0.147"
