[package]
name = "diesel-user-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
diesel = { version = "2.0.2", features = ["sqlite", "r2d2"] }
failure = "0.1.8"
r2d2 = "0.8.10"
serde = "1.0.147"
serde_derive = "1.0.147"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
