[package]
name = "gotham-postgres-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
futures = "0.3.25"
gotham = "0.7.1"
gotham_derive = "0.7.0"
hyper = "0.14.22"
mime = "0.3.16"
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = "0.7.7"
