[package]
name = "nickel-mailing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
lettre = { version = "0.10.1", features = ["smtp-transport", "builder"] }
lettre_email = "0.9.4"
log = "0.4.17"
nickel = "0.11.0"
