[package]
name = "rocket-comment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "^1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "^1.0"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
