[package]
name = "dbsync-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
config = "0.13.3"
diesel = { version = "2.0.2", features = ["postgres"] }
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
postgres = "0.19.4"
serde = "1.0.152"
serde_derive = "1.0.152"
