[package]
name = "router-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
anyhow = "1.0.66"
awc = "3.0.1"
config = "0.13.3"
env_logger = "0.9.3"
log = "0.4.17"
redis = "0.22.1"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_urlencoded = "0.7.1"
thiserror = "1.0.37"

[dev-dependencies]
cookie = "0.16.2"
lazy_static = "1.4.0"
mockito = "0.31.1"
rand = { version = "0.8.5", features = ["std"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
