[package]
name = "rouille-user-registration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "users-microservice"
path = "src/main.rs"

[lib]
name = "user_models"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
config = "0.13.1"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
env_logger = "0.10.0"
log = "0.4.17"
r2d2 = "0.8.10"
rouille = "3.6.1"
rust-crypto = "0.2.36"
serde = "1.0.152"
serde_derive = "1.0.152"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
